# ci-cd-tes

./: .gitignore  Dockerfile  Dockerfile.nginx  Makefile  app.test.js  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
.github/workflows/: .node.js.yml  deploy.yml  node.js.yml
app/: server.py  urls.py  views.py
ci_cd_test/: asgi.py  settings.py  urls.py  wsgi.py
my-app/: Dockerfile  README.md  package-lock.json  package.json
my-app/src/app/: page.js
nginx/: nginx.conf
nginx/conf.d/: https-block.conf
streamer/: Dockerfile  package-lock.json  package.json  server.js
templates/: home.html
tests/: test_main.py
